# Formula_Inspired_Team_Based_Optimization_for_Decision_Making_and_Strategy_in_Dynamic_Systems

./: .gitignore  Makefile  README.md  SHA256SUMS.txt  environment.yml  pyproject.toml  reproduce_all.ps1  reproduce_all.sh  requirements.txt
experiments/: clean_asoc_generated_results.ps1  debug_predictive_baselines.py  evaluation_counter.py  plot_redeployment_concept.py  plot_sensitivity.py  predictive_baselines.py  rebuild_dynamic_asoc_reports.py  rebuild_portfolio_reports.py  run_benchmarks.py  run_dynamic_asoc_suite.py  run_dynamic_benchmarks.py  run_dynamic_pitstop_budget_probe.py  run_dynamic_sensitivity_asoc.py  run_mddm_dynamic.py  run_mddm_portfolio.py  run_portfolio_asoc_suite.py  run_portfolio_case_study.py  smoke_test.py  stats_utils.py  validate_dynamic_activation_audit.py  validate_portfolio_results.py
experiments/data/: big_tech_walkforward_envs.pkl  market20_adj_close.csv  market20_walkforward_envs.pkl  techstocks.csv  techstocks_envs.pkl
experiments/results/: ablation_table.tex  asoc_dynamic_ablation_ranks.csv  asoc_dynamic_ablation_ranks.tex  asoc_dynamic_ablation_summary.csv  asoc_dynamic_activation_audit_summary.csv  asoc_dynamic_activation_validation_summary.csv  asoc_dynamic_budget_calibration.json  (+44 more)
manuscript/: asoc_fito.bbl  asoc_fito.tex  asoc_fito.txt  asoc_refs.bib  build_graphical_abstract.py  cas-refs.bib  demo.tex  elsarticle-template-harv.tex  elsarticle-template-num-names.tex  elsarticle-template-num.bbl  elsarticle-template-num.tex  generative_ai_declaration.txt  highlights.txt
scripts/: generate_checksums.py  verify_checksums.py
(+8 files in other folders)
